--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,5 +5,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  @apply bg-gray-100;
+}
+
+@theme {
+  --font-primary: "Montserrat", "sans-serif";
+  --font-secondary: "Lora", "serif";
 }
